# notepad_parser

./: Cargo.toml  README.md  notepad_parser.hexpat
src/: enums.rs  errors.rs  lib.rs  tests.rs  traits.rs  unsaved_chunks.rs
